--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -1,7 +1,12 @@
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 
 body{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: rgba(0, 0, 0, 0.76);
   color: white;
 }
